--- a/calculator/assets/styles.css
+++ b/calculator/assets/styles.css
@@ -22,16 +22,18 @@
 }
 .calculator {
   width: 400px;
-  border: 2px solid;
+  height: 400px;
+  border: 1px solid;
   border-radius: 15px;
-  padding: 15px;
+  padding: 10px;
+  background-color: black;
 }
 
 .screen {
   border: 2px solid;
-  border-radius: 30px;
   background-color: whitesmoke;
   padding: 10px;
+  margin-bottom: 1px;
   text-align: right;
   word-wrap: break-word;
   word-break: break-all;
@@ -51,15 +53,16 @@
   }
 
 .button-grid {
+  height: 270px;
   display: grid;
   grid-template-columns: repeat(4, 1fr);
-  background-color: whitesmoke;
-  grid-gap: 5px;
+  background-color: rgb(17, 17, 17);
+  grid-gap: 8px;
 }
 
 .span-2 {
   grid-column: span 2;
-  background-color: rgb(171, 177, 176);
+  background-color: rgb(208, 212, 212);
   margin-top: 10px;
 }
 
@@ -69,6 +72,18 @@
   grid-gap: 10px;
   background-color: rgb(180, 180, 179);
 }
+.btn-blue{
+  background-color: rgb(57, 189, 233);
+}
+.btn-red{
+  background-color: rgb(233, 71, 71);
+}
 .btn:hover {
   background-color: rgb(240, 231, 235);
+}
+.btn-red:hover{
+  background-color: rgb(240, 201, 201);
+}
+.btn-blue:hover{
+  background-color: rgb(199, 221, 241);
 }
