--- a/calculator/assets/styles.css
+++ b/calculator/assets/styles.css
@@ -87,3 +87,20 @@
 .btn-blue:hover{
   background-color: rgb(199, 221, 241);
 }
+
+.copy-right{
+  position: fixed;
+  bottom: 2%;
+  width: 100%;
+  font-size: 24px;
+  text-align: center;  
+}
+.github {
+  color: lightsalmon;
+  font-size: 24px;
+  transition: transform 0.3s ease-in-out;
+}
+
+.github:hover {
+  color: orangered
+}
